fixed wrap guide

--- a/styles/base.less
+++ b/styles/base.less
@@ -12,14 +12,6 @@ atom-text-editor,
                 padding-left: 4px;
         }
 
-        .wrap-guide {
-                background-color: rgba(255, 255, 255, 0.0);
-        }
-
-        .indent-guide {
-                color: fade(@blue, 10%);
-        }
-
         .invisible-character {
                 color: #626b83;
         }
@@ -51,7 +43,7 @@ atom-text-editor,
         }
 
         .invisible {
-                color: fade(#4c5568, 65%);
+                color: fade(#4c5568, 35%);
         }
 
         .selection .region {
