--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -10,8 +10,8 @@
 @syntax-background-color: @dark-gray-blue;
 
 // Guide colors
-@syntax-wrap-guide-color: @light-gray-blue;
-@syntax-indent-guide-color: @light-gray-blue;
+@syntax-wrap-guide-color: fade(@blue, 25%);
+@syntax-indent-guide-color: fade(@blue, 10%);
 @syntax-invisible-character-color: @dark-gray-blue;
 
 // For find and replace markers
